--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AndrewSouthpaw/jest-default-props-eager-eval#readme",
   "devDependencies": {
     "babel-jest": "^22.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "jest": "^22.4.2"
   },
   "jest": {
